# core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  devkit  milestones.md  sample-config.toml  test.sh  todo.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  naming-convention-request.md
.github/workflows/: ci.yml  compile.yml  docs.yml  main.yml  todo.yml
binaries/aarch64-apple-darwin/: kalavar
binaries/x86_64-apple-darwin/: kalavar
docs/: .rustc_info.json  404.md  CNAME  README.md  _config.yml  index.html  index.md  theme.css
docs/04947d3/: search-index.js  settings.html
docs/04947d3/kalavar_core/: all.html  index.html  static.ALLOC.html
docs/138f4dc/: search-index.js
docs/2b60751/: settings.html
docs/2b60751/kalavar_core/: fn.main.html
docs/2f180d7/: search-index.js
docs/2f180d7/kalavar_core/: all.html  static.ALLOC.html
docs/374a62d/: search-index.js
docs/374a62d/kalavar_core/: all.html
docs/47cb85a/latest/: .rustc_info.json
docs/66ab042/: search-index.js
docs/66ab042/kalavar_core/: all.html  fn.main.html  index.html
docs/7835332/: search-index.js
docs/7835332/kalavar_core/: all.html  fn.main.html  index.html  static.ALLOC.html
docs/94412e8/: search-index.js
docs/94412e8/kalavar_core/: all.html
docs/9a29d57/: settings.html
docs/9a29d57/kalavar_core/: fn.main.html
docs/9a315ec/latest/: .rustc_info.json
docs/b0a4d08/doc/: settings.html
docs/cfd626b/: search-index.js
docs/cfd626b/kalavar_core/: index.html
docs/dev-logs/: index.md  latest.md  posts.md
docs/doc/: search-index.js  settings.html  source-files.js  theme.css
docs/doc/kalavar_core/: all.html  fn.main.html  index.html  (+2 more)
docs/errors/: E101.md  E201.md  E202.md  E203.md  E204.md  EXXX.md  index.md
docs/latest/: .rustc_info.json  README.html
docs/protocol/: Authentication.md  Data-Types.md  General.md  Queries.md  README.md  auth.md  core.md  data-types.md  index.md  query.md
docs/static/: settings.html  source-files.js  theme.css
documentation/: README.md
documentation/protocol/: README.md  auth.md  core.md  data-types.md  example.md  ops.md
kalloc/: Cargo.toml
kalloc/src/: lib.rs
keys/: disclaimer.md  private.pem  public.pem
src/: compilers.rs  core_structures.rs  errors.rs  implementors.rs  main.rs  managers.rs  tests.rs  todo.rs
src/compilers/: KQL.rs
src/core/: utils.rs
src/core_structures/: as_bytes.rs  column.rs  connection_protocol.rs  database.rs  database_record.rs  row.rs  row_record.rs  table.rs  table_record.rs
src/implementors/: managers.rs
src/managers/: analytics.rs  authentication.rs  config.ref.toml  config.rs  connections.rs  encryption.rs  logging.rs  permission.rs  storage.rs  web_ui.rs
src/tests/: compiler_tests.rs  structure_tests.rs
utilities/version-checker/: Cargo.toml  build.sh
(+1822 files in other folders)
