[package]
name = "kalavar-core"
version = "0.1.0"
authors = ["fatalcenturion <tom.b.2k2@gmail.com>"]
edition = "2018"
description = "A fast, secure, and asynchrnous database system written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["v4"] }
tokio-rustls = "0.22.0"
orion = "0.15.5"
jemalloc-ctl = "0.3.3"
serde = "1.0.119"
bincode = "1.3.1"
rcgen = {version = "0.8.9", features = ["pem"] }
cidr = "0.1.1"
openssl = "0.10.32"
jemallocator = "0.3.2"