[package]
name = "kalavar-core"
version = "0.1.0"
authors = ["fatalcenturion <tom.b.2k2@gmail.com>"]
edition = "2018"
description = "A fast, secure, and asynchrnous database system written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Runtime dependencies
tokio = { version = "1.0.1", features = ["full"] }

# Logging dependencies
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["v4"] }
dirs = "3.0.1"

# (De)Serialization dependencies
serde = "1.0.119"
serde_derive = "1.0.119"
toml = "0.5.8"
bincode = "1.3.1"
hex = "0.4.0"

# Memory management has been disabled for windows compatibility at this time no alternative has been configured
## Memory management dependencies
kalloc = { path = "./kalloc" }
#jemallocator = "0.3.2"
#jemalloc-ctl = "0.3.3"

# Encryption/Authentication dependencies
rcgen = { version = "0.8.9", features = ["pem"] }
# cidr = "0.1.1"
# openssl = "0.10.32"
tokio-rustls = "0.22.0"
orion = "0.15.5"

# Analytics dependencies
heim = "0.0.11"
raw-cpuid = "9.0.0"

# Web UI information
# rocket = { git = "https://github.com/SergioBenitez/Rocket" }


[workspace]
members = [
    "kalloc"
]